Fix alignment of images.

--- a/app/assets/stylesheets/external/vcwiz.scss
+++ b/app/assets/stylesheets/external/vcwiz.scss
@@ -294,6 +294,10 @@ p.tight {
   display: flex;
   align-items: center;
 
+  img {
+    vertical-align: baseline;
+  }
+
   &.with-photos {
     position: relative;
     top: 1px;
